feat: dotenv removed and new base model added
