# api/app/models/app/Source.model.ts
@@ -1,21 +1,24 @@
-import { Channel } from "@app/entities/models";
+import { Base, Channel } from "@app/entities/models";
 
 class Source {
   id: number;
   code: string;
   description: string;
   channels: Channel[];
+  base: Base;
 
   constructor(
     id: number,
     code: string,
     description: string,
-    channels: Channel[] = []
+    channels: Channel[] = [],
+    base: Base | null = null
   ) {
     this.id = id;
     this.code = code;
     this.description = description;
     this.channels = channels;
+    this.base = base!;
   }
 }
 
